<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:descendantFocusability="blocksDescendants"
        android:padding="16dp"
        tools:context=".ui.detail.DetailCatalogueActivity">

        <ImageView
            android:id="@+id/image_poster"
            android:layout_width="230dp"
            android:layout_height="300dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="100dp"
            android:src="@color/teal_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_title"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/text_title"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="56dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.021"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/title" />

        <TextView
            android:id="@+id/text_duration"
            android:layout_width="73dp"
            android:layout_height="32dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="40dp"
            android:gravity="center_vertical|start"
            android:text="@string/text_duration"
            android:textColor="@color/teal_700"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/image_poster"
            app:layout_constraintTop_toBottomOf="@+id/text_title"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/duration"
            android:layout_width="59dp"
            android:layout_height="32dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="6dp"
            android:gravity="center_vertical"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/image_poster"
            app:layout_constraintTop_toBottomOf="@+id/text_duration"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/duration" />

        <TextView
            android:id="@+id/text_year"
            android:layout_width="53dp"
            android:layout_height="29dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="136dp"
            android:layout_marginEnd="6dp"
            android:gravity="center_vertical|start"
            android:text="@string/text_year"
            android:textColor="@color/teal_700"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/image_poster"
            app:layout_constraintTop_toBottomOf="@+id/text_title"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/year"
            android:layout_width="52dp"
            android:layout_height="29dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="6dp"
            android:gravity="center_vertical"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/image_poster"
            app:layout_constraintTop_toBottomOf="@+id/text_year"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/year" />

        <TextView
            android:id="@+id/rate"
            android:layout_width="70dp"
            android:layout_height="49dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="6dp"
            android:gravity="center"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/image_poster"
            app:layout_constraintTop_toBottomOf="@+id/year"
            app:layout_constraintVertical_bias="0.005"
            app:drawableStartCompat="@drawable/ic_star"
            tools:text="@string/rating" />

        <TextView
            android:id="@+id/genre"
            android:layout_width="300dp"
            android:layout_height="51dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="300dp"
            android:gravity="center_vertical"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fab_favorite_item"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/genre" />

        <TextView
            android:id="@+id/text_description"
            android:layout_width="104dp"
            android:layout_height="32dp"
            android:layout_marginStart="12dp"
            android:gravity="center_vertical|start"
            android:text="@string/text_description"
            android:textColor="@color/teal_700"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.012"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genre"
            app:layout_constraintVertical_bias="0.129" />

        <TextView
            android:id="@+id/description"
            android:layout_width="298dp"
            android:layout_height="332dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_description"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/description" />

        <TextView
            android:id="@+id/total_season"
            android:layout_width="18dp"
            android:layout_height="26dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/text_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genre"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/total_season" />

        <TextView
            android:id="@+id/text_season"
            android:layout_width="43dp"
            android:layout_height="26dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/text_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/total_season"
            app:layout_constraintTop_toBottomOf="@+id/genre"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/text_season" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_favorite_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:contentDescription="@string/favorite_button"
            app:layout_constraintBottom_toTopOf="@+id/progress_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_poster"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>