<resources>
    <string name="app_name">MyMDB</string>

    <!-- ==================================================== -->
    <string name="title">Title</string>
    <string name="rating">9.9</string>
    <string name="total_season">"4"</string>
    <string name="text_duration">Duration : </string>
    <string name="duration">1h 35m</string>
    <string name="text_year">Year : </string>
    <string name="year">2021</string>
    <string name="text_season">Season</string>
    <string name="text_genre">Genre : </string>
    <string name="genre">Drama, Adventure, Sci-Fi, Action</string>
    <string name="text_description">Description : </string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus venenatis, justo eu consectetur blandit, nibh purus pellentesque lacus, ut elementum eros lacus eu augue. Praesent viverra pellentesque urna at mollis. Vivamus aliquet, massa sit amet pretium faucibus, risus nibh efficitur augue, a finibus quam massa eu nunc. Cras a tortor laoreet, ultrices velit ut, eleifend nunc. Curabitur rhoncus eget justo vitae pharetra. Maecenas ac purus nibh. Phasellus feugiat odio nulla, at rhoncus lectus lobortis vitae. Proin vitae libero nulla. Duis egestas ex vitae lacus mollis ornare. Sed malesuada neque eget interdum eleifend.</string>
    <string name="movies">Movies</string>
    <string name="tv_show">TV Show</string>
    <string name="movies_favorite">Favorite Movies</string>
    <string name="tv_show_favorite">Favorite TV Show</string>
    <string name="menu_favorite">Your Favorites</string>
    <string name="favorite_button">Favorite Button</string>
</resources>